@@ -1,5 +1,8 @@
+    ADDED: a (missing) shortcut to bookmark current item (ctrl-shift-d)
     ADDED: Lithuanian translation (thanks Dovydas Sankauskas)
+    ADDED: you can turn off sending CDs to the terminal emulator (general tab)
 
+    FIXED: konfigurator minor fixes
     FIXED: viewer, the tabs were identified by its page index, which can change
     FIXED: searcher: space means logical OR "text1 text2" == "*text1* || *text2*"
     FIXED: krarc cannot step into those archives which name contains '#'
